--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Khand:wght@400;500&family=Koulen&family=Inter:wght@200;400;800&family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="styles.css?v=47">
+    <link rel="stylesheet" href="styles.css?v=49">
 </head>
 <body>
     <!-- Loading Screen -->
     <div class="loading-screen" id="loadingScreen">
-        <img src="assets/Splash.gif" alt="Loading...">
+        <img src="assets/Splash.gif" alt="Loading..." class="loading-bg">
+        <div class="loading-center">
+            <img src="assets/5e25ebd52434e35e5b0f06bc54f9f97e 1.gif" alt="Center Animation" class="loading-center-gif">
+            <div class="loading-center-text">
+                <div class="loading-text-digital">Digital</div>
+                <div class="loading-text-transformation">Transformation</div>
+                <div class="loading-text-wheel">WHEEL</div>
+            </div>
+        </div>
     </div>
     
     <!-- Top Navigation -->
